SimpleApplication/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-app
  template:
    metadata:
      labels:
        app: simple-app
    spec:
      containers:
        - name: simple-application
          image: alariclightin/simple-application:1.0
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8000
          readinessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8000
