SimpleApplication/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/biderman($|/)(.*)
            pathType: Prefix
            backend:
              service:
                name: simple-app-service
                port:
                  number: 80
